package com.atc.simulator;

/**
 * Created by amiritis on 9/04/2016.
 */
public class ILS extends DirectionalBeacon

{
    public ILS( Position aPosition, String aICAOID )
    {
        super( aPosition, aICAOID );
    }
}
