package com.atc.simulator;

/**
 * Created by amiritis on 9/04/2016.
 */
public class VOR extends DirectionalBeacon

{
    public VOR( Position aPosition, String aICAOID )
    {
        super( aPosition, aICAOID );
    }
}